--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "body-parser": "^1.17.2",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "es6-promise": "^4.1.0",
     "express": "^4.15.3",
     "guid": "^0.0.12",
+    "ngx-color-picker": "^4.0.3",
     "passport": "^0.3.2",
     "passport-http-bearer": "^1.0.1",
     "rxjs": "^5.1.0",
     "socket.io": "^2.0.2",
+    "web-animations-js": "^2.2.5",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
